--- a/META.yml
+++ b/META.yml
@@ -30,7 +30,7 @@ requires:
   PYX::Parser: 0.02
   perl: 5.6.0
 resources:
-  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=PYX-GraphViz
+  bugtracker: https://github.com/tupinek/PYX-GraphViz/issues
   homepage: https://github.com/tupinek/PYX-GraphViz
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/PYX-GraphViz
